# double_cephs

./: .gitignore  candidates.csv  gaia_results.csv  ogle_targets.txt  pyproject.toml  query.py  setup.cfg  setup.py
varcross/: amplitude_ratio.py  cli.py  gaia_query.py  rv_catalog_query.py  simbad_lookup.py
varcross.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
