[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "varcross"
dynamic = ["version"]
description = "Modular pipeline for Gaia–OGLE variable star cross-analysis"
authors = [
    { name = "Dóra Tarczay-Nehéz" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "astroquery",
    "astropy",
    "numpy",
    "matplotlib",
    "pandas"
]

[project.optional-dependencies]
dev = ["seismolab"]
